correct z-index to menu container

--- a/index.css
+++ b/index.css
@@ -1333,7 +1333,7 @@
   width: 100%;
   height: 100vh;
   position: fixed;
-  z-index: 100;
+  z-index: 500;
   display: none;
   background-color: var(--color-gray-200);
   flex-direction: column;
